# rox_tmp_repo

./: .gitignore  .gitmodules  Dockerfile  Justfile  LICENSE  Makefile  PID_IMPLEMENTATION_SUMMARY.md  README.md  branch_remove.fish  docker-compose.yml  docker-compose.yml.deprecated  docker_launch.fish  pyproject.toml  ros2_launch.bash
.github/workflows/: docker-image.yml
automation/: Dockerfile  bluetooth-connected.service  check_bluetooth_connected.sh  check_controller_connected.sh  controller-connected.service  description.md  docker-compose.yml  robot.service  ros2_start.service  setup.bash
docs/: README.md  ddsm_ctrl_api_reference.md  devices.md  robot_operation_manual.md  unicast.md
docs/docs/: DESCRIPTION_DOCS.md  README.md  devices.md  docker.md  ros2_workflow.md  ssh.md  unicast.md
docs/notes/: README.md
install/: local_setup.sh  setup.sh
install/color_sensor/share/color_sensor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/color_sensor/share/color_sensor/launch/: color_sensor.launch.py
install/joy_driver/share/joy_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joy_driver/share/joy_driver/cmake/: joy_driverConfig.cmake
install/mecanum_wheel_controller/share/ament_index/resource_index/package_run_dependencies/: mecanum_wheel_controller
install/mecanum_wheel_controller/share/mecanum_wheel_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mecanum_wheel_controller/share/mecanum_wheel_controller/cmake/: mecanum_wheel_controllerConfig.cmake
install/ultrasonic_sensor/share/ultrasonic_sensor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ultrasonic_sensor/share/ultrasonic_sensor/cmake/: ultrasonic_sensorConfig.cmake
log/: latest_build
resources/: 99-usb-serial.rules  README.md  motor_rpm.py  send_command_with_crc.cpp  serial_reader.py
resources/docker/: docker-compose.yml
ros_ws/: BEFORE_AFTER.md  DEBUGGING.md  Justfile  Makefile  README.md  debug_demo.sh  joy_test_commands.sh  relay.py  requirements.txt
ros_ws/config/: README.md  config.yaml  ekf.yaml  mecanum.yaml  mecanum_debug.yaml  mechanum.yaml
ros_ws/launch/: README.md  launch.py  launch_raw_imu.py  launch_with_ekf.py  launch_with_ekf_simple.py  launch_with_madgwick.py  launch_with_wheel_odom.py  launch_without_joy.py  mecanum_system.launch.py
ros_ws/rosbag/: test.py
ros_ws/rosbag/calibrated/: metadata.yaml  test.py
ros_ws/rosbag/rosbag2_2025_08_08-16_25_59/: metadata.yaml  test.py
ros_ws/scripts_used_inside_container/: ledpikapika.py  motor_feedback_reader_test.py  reader.cpp
ros_ws/src/: README.md
ros_ws/src/color_sensor/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/color_sensor/color_sensor/: color_publisher.py  tca9548a.py  tcs34725.py
ros_ws/src/color_sensor/color_sensor/connectors/: i2c.py
ros_ws/src/color_sensor/deprecated_files/: Dockerfile.deprecated
ros_ws/src/color_sensor/launch/: color_sensor.launch.py
ros_ws/src/custom_interfaces/: CMakeLists.txt  README.md  package.xml
ros_ws/src/custom_interfaces/action/: UpperFunction.action
ros_ws/src/custom_interfaces/msg/: CmdDpad.msg  ModeStatus.msg  MotorFeedback.msg  UpperMotor.msg
ros_ws/src/custom_interfaces/srv/: SetMode.srv
ros_ws/src/imu/: CMakeLists.txt  README.md  package.xml
ros_ws/src/imu/include/imu/: imu.h  imulib.h
ros_ws/src/imu/src/: imu.cpp  imulib.cpp
ros_ws/src/joy_driver/: CMakeLists.txt  README.md  joy_driver_node.py  package.xml
ros_ws/src/joy_driver/include/joy_driver/: joy_driver_node.hpp
ros_ws/src/joy_driver/src/: joy_driver_node.cpp  joy_driver_node.cpp.bak  main.cpp
ros_ws/src/joy_driver/test/: test_joy_driver.cpp
ros_ws/src/led_control/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/led_control/led_control/: led_control.py
ros_ws/src/led_control/led_control/led_scripts/: blue.py  cyan.py  green.py  green_gear_down.py  off.py  red.py  violet.py  white.py
ros_ws/src/lifting_motor/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/lifting_motor/lifting_motor/: lifting_motor.py  lifting_motor_state_machine.mmd  motor_driver.py  state_machine.py
ros_ws/src/mecanum_wheel_controller/: CMakeLists.txt  README.md  package.xml
ros_ws/src/mecanum_wheel_controller/config/: mecanum.yaml  mechanum.yaml
ros_ws/src/mecanum_wheel_controller/include/mecanum_wheel_controller/: ddsm_ctrl.hpp  mecanum_wheel_controller.hpp  motor_controller.hpp
ros_ws/src/mecanum_wheel_controller/src/: ddsm_ctrl.cpp  main.cpp  mecanum_wheel_controller_node.cpp  motor_controller.cpp
ros_ws/src/ultrasonic_sensor/: CMakeLists.txt  README.md  package.xml
ros_ws/src/ultrasonic_sensor/src/: ultrasonic_sensor.cpp
ros_ws/src/upper_motor/: CMakeLists.txt  README.md  package.xml
ros_ws/src/upper_motor/src/: upper_motor.cpp
sandbox/: README.md  mecanum_speed.cpp  relay.py
sandbox/abb/: relay.py
sandbox/jordan/: mecanum_speed.cpp  motor_updown.py  relay.py
sandbox/senag/: ledpikapika.py  limitswitch.py  relay.py  senagmotor.py
sandbox/yano_stash/: elevation_motor_test.py  led_command.py  ledpikapika.py  motor_feedback_test.cpp
tasks/: elevation_bugfix_1.md  tasks.md
