<?x  <name>ultrasonic_sensor</name>
  <version>1.0.0</version>
  <description>ROS 2 package for HC-SR04 ultrasonic sensor distance measurement using GPIO</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">rodep</maintainer>
  <license>MIT</license>rsion="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ultrasonic_sensor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">rodep</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- System dependencies for GPIO access -->
  <!-- Install with: sudo apt install libgpiod-dev libgpiod2 -->

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
